# OmniSight-dev

./: .env.example  .gitignore  ACAP_PACKAGING.md  CLAUDE.md  CMakeLists-phase3.txt  CMakeLists.txt  CMakeLists.txt.phase3  DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS_V0.2.0.md  DEPLOY_P3265_LVE.md  DEVELOPMENT.md  Dockerfile  FOLDER_ORGANIZATION_COMPLETE.md  HARDWARE_COMPATIBILITY.md  LOG_COLLECTION_GUIDE.md  Makefile  PHASE2_TASK1_COMPLETE.md  PHASE3_ARCHITECTURE.md  PHASE3_FINDINGS.md  PHASE4_DEPLOYMENT_GUIDE.md  PHASE4_NATIVE_HTTP_SERVER.md  PHASE4_NEXT_STEPS.md  PHASE4_STEP2_COMPLETE.md  PHASE4_STEP2_STATUS.md  PHASE4_STEP3_COMPLETE.md  PHASE4_STEP4_COMPLETE.md  PHASE4_SUMMARY.md  QUICKSTART.md  QUICK_API_TEST.sh  README.md  TESTING_AND_DEPLOYMENT.md  V051_VALIDATION_SUCCESS.md  WINDOWS_TESTING_GUIDE.md  cgi.conf  docker-compose.yml  manifest.json  omnisight  package.conf  stub-toolchain.cmake  test_flask_api.py  (+1 more)
app/: README.md  hybrid_server.py  server.py  server_acap.py
app/api/: claude_flow.py  perception.py  swarm.py  system.py  timeline.py
app/api/config/: perception.json
app/api/perception/: detections.json  tracks.json
app/api/timeline/: futures.json  predictions.json
app/coordinator/: __init__.py  federated.py  performance.py  swarm.py  timeline.py
app/ipc/: __init__.py  ipc_client.py  json_client.py
build-http-test/: test_http_simple
build-integration-test/: test_integration
config/: mosquitto.conf
docs/: ACAP_NATIVE_IMPLEMENTATION_PLAN.md  IPC_ARCHITECTURE.md  IPC_IMPLEMENTATION_SUMMARY.md  IPC_QUICKSTART.md  README.md  RELEASE_NOTES_v0.2.1.md  V0.3.0_DEPLOYMENT_ANALYSIS.md  WEEK1_DAY1_PROGRESS.md  WEEK1_DAY2_PROGRESS.md
docs/acap/: ACAP_INSIGHTS_FROM_PANDOSME.md
docs/archive/: CLAUDE_FLOW_INTEGRATION_SPEC.md  FLASK_API_TEST_RESULTS.md  FOLDER_ORGANIZATION_PLAN.md  PERCEPTION_PHASE3_INTEGRATION.md
docs/development/: API_ENDPOINTS.md  DOCUMENTATION_CLEANUP_SUMMARY.md  PERCEPTION_CODE_REFERENCE.md  STUB_BUILD.md
docs/guides/: INSTALLATION.md  STUB_DEPLOYMENT_GUIDE.md
docs/phase1/: PHASE1_STATUS.md  STUB_BUILD_COMPLETE.md
docs/phase2/: PHASE2_CODE_REVIEW.md  PHASE2_IPC_IMPLEMENTATION.md  PHASE2_ROADMAP.md
docs/phase3/: PHASE3_BUILD_AND_DEPLOY.md  PHASE3_BUILD_STATUS.md  PHASE3_BUILD_SYSTEM.md  PHASE3_DEPLOYMENT_GUIDE.md  PHASE3_DEPLOYMENT_SUCCESS.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE3_QUICK_START.md  PHASE3_STATUS.md  PHASE3_SUMMARY.md  PHASE3_WEEK10_TIMELINE_MODULE.md
docs/phase4/: PHASE4_CLAUDE_FLOW_IMPLEMENTATION.md  PHASE4_COMPLETION_SUMMARY.md  PHASE4_DEPLOYMENT_FIX.md  PHASE4_DEPLOYMENT_GUIDE.md  PHASE4_PYTHON_DEPENDENCY_ISSUE.md  PHASE4_V2_DEPLOYMENT_SUMMARY.md
docs/troubleshooting/: DEPLOYMENT_FIX.md  QUICK_TROUBLESHOOTING.md
examples/: omnisight_main.c
models/: README.md  TRAINING.md
models/training/: requirements.txt
native/: Dockerfile
native/app/: manifest.json  omnisight.c
native/app/api/: config.py  (+1 more)
package-hybrid/: LICENSE  manifest.json  omnisight  package.conf
package-hybrid/api/: stats.json
package-hybrid/html/: index.html
package-minimal-clean/: LICENSE  manifest.json  package.conf
package-minimal-clean/html/: index.html
package-phase2/: LICENSE  manifest.json  omnisight
package-phase4-v3/: manifest.json  omnisight  package.conf
package-phase4-v3-fixed/: manifest.json  package.conf
package-phase4-v3-fixed/html/: index.html
package-phase4-v3/html/: index.html
package-phase4-v4/: manifest.json
package-phase4-v4/html/: index.html
package-phase4-v5/: manifest.json
package-phase4-v5/html/: index.html
package-phase4-v6/: manifest.json  package.conf
package-phase4-v7/: manifest.json  omnisight  package.conf
package-phase4-v7/html/: index.html
package-v050/: manifest.json  package.conf
package-v050/html/: index.html
package-v051/: LICENSE  manifest.json  package.conf
package-v060/: manifest.json  omnisightv2  package.conf
package-v061/: LICENSE  manifest.json  omnisightv2  package.conf
package-v061/html/: index.html
package-v070/: manifest.json  omnisight_start.sh  package.conf
scripts/: build-eap.sh  build-http-test.sh  build-hybrid-eap.sh  build-integration-test.sh  build-minimal-clean.sh  build-phase2-eap.sh  build-phase3-v060.sh  build-phase3-v061.sh  build-phase4-v070.sh  build-phase4-v3-FIXED-eap.sh  build-phase4-v3-native-eap.sh  build-phase4-v4-eap.sh  build-phase4-v5-eap.sh  build-phase4-v6-eap.sh  build-phase4-v7-eap.sh  build-stub.sh  build-v050-full.sh  manifest-camera.json  manifest-hybrid.json  manifest-minimal-v1.2.json  manifest-minimal.json  manifest-phase3.json  manifest-v1.3.json  manifest-v1.4.json  package-hybrid.conf
scripts/deprecated/: build-eap.sh  build-hybrid-eap.sh  build-phase2-eap.sh  build-phase3-eap.sh  build-phase4-eap.sh  build-phase4-fixed-eap.sh  build-phase4-v2-eap.sh  build-stub-eap-v2.sh  build-stub-eap.sh
scripts/testing/: test-flask-api.sh  test-ipc-integration.sh
src/: main.c  omnisight_core.c  omnisight_core.h
src/http/: http_server.c  http_server.h  http_server_simple.c  test_http_server.c  test_http_simple.c  test_integration.c
src/ipc/: ipc_server.c  ipc_server.h  json_export.c  json_export.h
src/perception/: CMakeLists.txt  CMakeLists.txt.phase3  README.md  behavior.c  behavior.h  behavior_analysis.c  behavior_analysis.h  larod_inference.c  larod_inference.h  object_tracking.c  object_tracking.h  perception.c  perception.c.phase3  perception.h  perception_stub.c  tracker.c  tracker.h  vdo_capture.c  vdo_capture.h
src/swarm/: CMakeLists.txt  README.md  federated_learning.c  federated_learning.h  mqtt_client.c  mqtt_client.h  swarm.c  swarm.h  swarm_stub.c
src/timeline/: CMakeLists.txt  README.md  event_predictor.c  event_predictor.h  timeline.c  timeline.h  timeline_stub.c  trajectory_predictor.c  trajectory_predictor.h
tests/: test_perception.c  test_timeline.c
tests/phase4/: __init__.py  test_claude_flow_integration.py
web/: README.md
web/api/: omnisight_api.c  omnisight_api.h
web/frontend/: PHASE2_DASHBOARD.md  TEST_DASHBOARD.md  index.html  package.json
(+177 files in other folders)
